src/test/ui/no_crate_type.stderr
error: `crate_type` requires a value
  --> $DIR/no_crate_type.rs:12:1
   |
LL | #![crate_type]  //~ ERROR `crate_type` requires a value
   | ^^^^^^^^^^^^^^
   |
   = note: for example: `#![crate_type="lib"]`

error: aborting due to previous error

