src/test/ui/no_crate_type.rs
// regression test for issue 11256
#![crate_type]  //~ ERROR attribute must be of the form

fn main() {
    return
}
